--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="shortcut icon" href="assets/images/shslogo-2-90x90.png" type="image/x-icon">
   <meta name="description" content="">
   
-  
+  <meta property="og:title" content="Class of 2026" />
+<meta property="og:url" content="https://shs2026.com" />
+	<meta property="og:image" content="https://i.imgur.com/Aht8NQh.png" />
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
