--- a/page1.html
+++ b/page1.html
@@ -35,8 +35,8 @@
     <div class="ticker-container">
       <div class="ticker-wrapper">
       <div class="ticker-transition">
-    <div class="ticker-item"><h1  class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Class Dues of $20 are due Friday 6/10!</h1></div>
-    <div class="ticker-item"><h1  class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Dues will be collected at lunch between 2/10 and 6/10 </h1></div>
+        <div class="ticker-item"><h1  class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Pickleball Tournament 11/15 and 11/17!</h1></div>
+        <div class="ticker-item"><h1  class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Teams of 2, $10 each player</h1></div>
       </div>
       </div>
       </div>
